# ampaper

./: .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  THIRD-PARTY-LICENSES.md
docs/: ENCRYPTION-DECISION.md  FORMAT-V1.md  FORMAT-V2.md  FORMAT-V3.md  MILESTONES.md  MRPODS-DELTA.md  PAPERBAK-HACKS.md  PAPERBAK-ORIGINAL.md
gui/: Cargo.toml  build.rs
gui/examples/: decode_scanned_pdf.rs  diagnose_lorem2.rs  geom_check.rs  inspect_lorem2.rs  lorem_pdf_size.rs  save_lorem_pdf.rs
gui/src/: app.rs  main.rs  print.rs  worker.rs
gui/src/views/: decode.rs  encode.rs  mod.rs  print.rs  settings.rs  stubs.rs
gui/tests/: decode_smoke.rs  encode_smoke.rs  pdf_round_trip.rs  pdf_smoke.rs  print_anyfile.rs  print_to_pdf_round_trip.rs  scanned_pdf_golden.rs  v3_cmyk_decode_tab_e2e.rs  v3_cmyk_print_to_pdf_round_trip.rs  v3_print_to_pdf_round_trip.rs
src/: block.rs  bz.rs  crc.rs  decoder.rs  dot_grid.rs  ecc.rs  encoder.rs  format_v2.rs  legacy_aes.rs  lib.rs  main.rs  page.rs  scan.rs  v2_crypto.rs
src/v3/: cell.rs  cmyk.rs  codec.rs  decoder.rs  encoder.rs  finder.rs  format.rs  mod.rs  page.rs  threshold.rs
tests/: golden_decode.rs  v3_cmyk_round_trip.rs  v3_page_round_trip.rs  v3_round_trip.rs
tests/golden/v1-paperbak/: README.md
