[package]
name = "ampaper"
version = "0.0.1"
edition = "2024"
description = "Rust port of PaperBack — back up files as printable, scannable bitmaps on paper"
license = "GPL-3.0-or-later"
repository = "https://github.com/amrust/ampaper"
readme = "README.md"
authors = ["ampaper contributors"]
rust-version = "1.85"

[dependencies]
# bzip2 wraps either libbz2-rs-sys (pure-Rust reimplementation,
# default) or bzip2-sys (FFI to the C libbzip2). PaperBack 1.10
# uses the C library; we accept either backend because the
# bzip2 stream format is well-defined and conformant decoders
# all agree, even if compressor heuristics differ slightly.
# Round-trip tests cross-check against the `bzip2` CLI for that
# reason (see src/bz.rs tests).
bzip2 = "0.6.1"

# RustCrypto stack for legacy AES-192-CBC read (M7) — see
# docs/FORMAT-V1.md §6.3 and src/legacy_aes.rs. PB 1.10 derives
# the AES key via PBKDF2-HMAC-SHA-1 (Brian Gladman's pwd2key
# default), 524288 iterations, 16-byte salt; the AES mode is
# CBC with a 16-byte IV stored alongside the salt in the
# SuperBlock's name[] field. Forward AES-192 write is NOT
# part of M7 and these crates only ship decryption code.
aes = "0.9"
cbc = "0.2"
pbkdf2 = "0.13"
sha1 = "0.11"

# Other deps (windows-rs for GDI / WIA / TWAIN at M9/M10) land
# at the milestone that needs them. See docs/MILESTONES.md for
# the staging order.

[target.'cfg(windows)'.dependencies]
# GUI + printing + scanning lives behind cfg(windows) for now.
# When we add WIA / TWAIN / GDI bindings via windows-rs, the
# feature list will grow here. cfg(unix) builds aim for a CLI
# encoder/decoder that round-trips the same bitstream so anyone
# on Linux/macOS can decode an existing PaperBack scan even if
# they can't drive a printer/scanner from the GUI.

[dev-dependencies]
# image is used by the golden-vector integration tests to read the
# `.bmp` files PaperBack 1.10 emits and the `.scan.png` files from
# external scanner software. Default features pull in JPG/TIFF/GIF/
# WebP decoders we don't need; bmp + png is enough for the test
# surface. When a runtime `decode_image_path` API lands at M10 it
# can promote to a regular dependency.
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
