[workspace]
# The codec crate (this Cargo.toml's [package]) is platform-agnostic;
# the GUI crate sits in `gui/` so eframe / winit / wgpu deps don't
# leak into the lib's dep tree. Print + scan binaries (M9 / M10) will
# join as additional workspace members behind cfg(windows).
members = ["gui"]
resolver = "3"

[package]
name = "ampaper"
version = "0.0.1"
edition = "2024"
description = "Rust port of PaperBack — back up files as printable, scannable bitmaps on paper"
license = "GPL-3.0-or-later"
repository = "https://github.com/amrust/ampaper"
readme = "README.md"
authors = ["ampaper contributors"]
rust-version = "1.85"

[dependencies]
# bzip2 wraps either libbz2-rs-sys (pure-Rust reimplementation,
# default) or bzip2-sys (FFI to the C libbzip2). PaperBack 1.10
# uses the C library; we accept either backend because the
# bzip2 stream format is well-defined and conformant decoders
# all agree, even if compressor heuristics differ slightly.
# Round-trip tests cross-check against the `bzip2` CLI for that
# reason (see src/bz.rs tests).
bzip2 = "0.6.1"

# RustCrypto stack for legacy AES-192-CBC read (M7) — see
# docs/FORMAT-V1.md §6.3 and src/legacy_aes.rs. PB 1.10 derives
# the AES key via PBKDF2-HMAC-SHA-1 (Brian Gladman's pwd2key
# default), 524288 iterations, 16-byte salt; the AES mode is
# CBC with a 16-byte IV stored alongside the salt in the
# SuperBlock's name[] field. Forward AES-192 write is NOT
# part of M7 and these crates only ship decryption code.
aes = "0.9"
cbc = "0.2"
pbkdf2 = "0.13"
sha1 = "0.11"

# v2 crypto stack (M11). PBKDF2-HMAC-SHA-256 at 600k iterations
# derives the AES-256 key; AES-256-GCM is the AEAD wrapping the
# (optionally bzip2'd) plaintext. See docs/FORMAT-V2.md §3 +
# docs/ENCRYPTION-DECISION.md. aes-gcm 0.11.0-rc tracks the
# RustCrypto cipher 0.5 / aes 0.9 / pbkdf2 0.13 / sha2 0.11 line
# we already use; the rc tag is the latest tagged release at the
# time of writing — a stable tag will replace it when published.
aes-gcm = "0.11.0-rc.3"
sha2 = "0.11"

# Cross-platform OS entropy. The KDF salt and GCM IV must be fresh
# per encode operation and unguessable; getrandom is the standard
# RustCrypto-adjacent way to ask the OS for that.
getrandom = "0.4"

# v3 codec ECC (M12+). RaptorQ (RFC 6330) is a rateless fountain
# code: any K + small overhead encoded packets recover the source.
# Replaces v1/v2's fixed RS+XOR group structure with arbitrary
# erasure tolerance, eliminating PB-1.10's per-page
# wasted-trailing-cells remainder. Apache-2.0, pure Rust, std-only
# (the no-std story from the upstream crate isn't relevant here —
# ampaper already pulls bzip2/aes/getrandom which need std too).
# See docs/FORMAT-V3.md for how RaptorQ output maps onto cells.
raptorq = "2"

# v3 codec compression layer. Zstandard (RFC 8478) is the modern
# replacement for bzip2 on the v1/v2 codec — near-LZMA ratios on
# text, an order of magnitude faster decode, stable wire format
# (won't change in 30 years). The encoder runs at level 22
# (--ultra-22) for max ratio since paper-archive encoding is a
# one-time cost. Compression is applied conditionally per file:
# if zstd's output isn't smaller than the original, we ship raw
# bytes and set the anchor's compression flag to None.
#
# `zstd` (this crate) is an FFI binding to the canonical libzstd
# C library, statically linked from the bundled source. Pure-Rust
# alternatives (`ruzstd` for decode, others for encode) exist but
# are less mature; the FFI route is fine since zstd's wire format
# is stable across implementations — any future pure-Rust port
# will read what we encode here.
zstd = "0.13"

# Other deps (windows-rs for GDI / WIA / TWAIN at M9/M10) land
# at the milestone that needs them. See docs/MILESTONES.md for
# the staging order.

[target.'cfg(windows)'.dependencies]
# GUI + printing + scanning lives behind cfg(windows) for now.
# When we add WIA / TWAIN / GDI bindings via windows-rs, the
# feature list will grow here. cfg(unix) builds aim for a CLI
# encoder/decoder that round-trips the same bitstream so anyone
# on Linux/macOS can decode an existing PaperBack scan even if
# they can't drive a printer/scanner from the GUI.

[dev-dependencies]
# image is used by the golden-vector integration tests to read the
# `.bmp` files PaperBack 1.10 emits and the `.scan.png` files from
# external scanner software. Default features pull in JPG/TIFF/GIF/
# WebP decoders we don't need; bmp + png is enough for the test
# surface. When a runtime `decode_image_path` API lands at M10 it
# can promote to a regular dependency.
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
