[package]
name = "ampaper-gui"
version = "0.0.1"
edition = "2024"
description = "egui front-end for the ampaper Rust port of PaperBack"
license = "GPL-3.0-or-later"
repository = "https://github.com/amrust/ampaper"
authors = ["ampaper contributors"]
rust-version = "1.85"

[dependencies]
# The codec lives in the sibling crate. GUI imports it as a normal
# dep — no feature-flag dance, the GUI crate is the only place
# eframe / wgpu / winit show up.
ampaper = { path = ".." }

# eframe = the native (and web) wrapper around egui. Pulls in winit
# for windowing + a rendering backend on all three platforms. Pure-
# Rust dep tree; no GTK / Qt / WebView. See
# memory/gui_stack_decision.md for why.
#
# Backend choice: `glow` (OpenGL) over the default `wgpu`. The
# default-feature wgpu backend was crashing at startup on this
# machine with STATUS_ACCESS_VIOLATION inside native driver code —
# wgpu's adapter selection sometimes hits Windows GPU/driver edge
# cases that we don't want to chase for an archival utility. glow
# is more conservative (OpenGL via ANGLE/native) and "just works"
# across the broadest set of installs, which matches an archival
# tool that needs to launch reliably 10 years from now.
#
# `persistence` is intentionally NOT pulled in yet; we'll enable it
# (with the `ron` + `serde` deps it implies) when settings storage
# lands.
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }

# Native file-pick / save dialogs. rfd wraps Win32 IFileDialog,
# macOS NSOpenPanel, and Linux portal-or-zenity — same `pick_file`
# / `save_file` API everywhere. Aligns with the cross-platform goal
# in memory/cross_platform_goal.md.
rfd = "0.17"

# Encode the raw grayscale Vec<u8> the codec produces into BMP/PNG
# files for the user to save. The lib already pulls in `image` as a
# dev-dep for golden-vector tests; here it's a real runtime dep.
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg"] }

# Convenience for spawning blocking codec jobs onto a worker thread.
# eframe's `Context::request_repaint_after` lets us drive UI updates
# from the worker thread without polling.
# (No tokio yet — encode/decode are CPU-bound, std::thread is enough.)
