[package]
name = "ampaper-gui"
version = "0.0.1"
edition = "2024"
description = "egui front-end for the ampaper Rust port of PaperBack"
license = "GPL-3.0-or-later"
repository = "https://github.com/amrust/ampaper"
authors = ["ampaper contributors"]
rust-version = "1.85"

[dependencies]
# The codec lives in the sibling crate. GUI imports it as a normal
# dep — no feature-flag dance, the GUI crate is the only place
# eframe / wgpu / winit show up.
ampaper = { path = ".." }

# eframe = the native (and web) wrapper around egui. Pulls in winit
# for windowing + a rendering backend on all three platforms. Pure-
# Rust dep tree; no GTK / Qt / WebView. See
# memory/gui_stack_decision.md for why.
#
# Backend choice: `glow` (OpenGL) over the default `wgpu`. The
# default-feature wgpu backend was crashing at startup on this
# machine with STATUS_ACCESS_VIOLATION inside native driver code —
# wgpu's adapter selection sometimes hits Windows GPU/driver edge
# cases that we don't want to chase for an archival utility. glow
# is more conservative (OpenGL via ANGLE/native) and "just works"
# across the broadest set of installs, which matches an archival
# tool that needs to launch reliably 10 years from now.
#
# `persistence` is intentionally NOT pulled in yet; we'll enable it
# (with the `ron` + `serde` deps it implies) when settings storage
# lands.
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
    # Pulls in ron + serde so eframe::set_value / eframe::get_value
    # can round-trip our PersistedState through OS-standard config
    # paths (%APPDATA%\ampaper on Windows, ~/.local/share/ampaper on
    # Linux, ~/Library/Application Support/ampaper on macOS).
    # Used by ampaperApp::save / ::new for window state + Encode tab
    # defaults across sessions.
    "persistence",
] }
serde = { version = "1", features = ["derive"] }

# Native file-pick / save dialogs. rfd wraps Win32 IFileDialog,
# macOS NSOpenPanel, and Linux portal-or-zenity — same `pick_file`
# / `save_file` API everywhere. Aligns with the cross-platform goal
# in memory/cross_platform_goal.md.
rfd = "0.17"

# Encode the raw grayscale Vec<u8> the codec produces into BMP/PNG
# files for the user to save. The lib already pulls in `image` as a
# dev-dep for golden-vector tests; here it's a real runtime dep.
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg"] }

# Pure-Rust PDF writer (MIT). PDF is an open ISO standard
# (ISO 32000-1 / -2) — Adobe co-authored the spec but it's been
# free + open since 2008, and PDF/A is *the* archival standard.
# printpdf lets us embed the raw 8-bit grayscale bitmap as an
# XObject and place it on a page sized at the chosen DPI, no Adobe
# tooling involved. Used by the Print tab's "Save as PDF" path so
# users without a Windows printer driver can still produce a
# print-ready archival document.
#
# `default-features = false` drops the `html` feature, which pulls
# in azul-layout / kuchiki / fontconfig — heavy and irrelevant for
# our "embed a raw bitmap as an XObject" use case. We only need
# `images` to enable image XObjects; we feed raw R8 bytes directly
# so no per-format decoder feature (bmp/png/jpeg/...) is needed.
printpdf = { version = "0.9", default-features = false, features = ["images"] }

# PDF input on the Decode tab. pdfium-render wraps Google's PDFium
# (the renderer Chrome uses) — Apache-2.0 / BSD-3-Clause, and the
# Rust crate is MIT/Apache-2.0. This is a runtime-loaded dep:
# Pdfium::default() looks for pdfium.dll / libpdfium.so / libpdfium.dylib
# next to the executable first, then falls back to system paths.
# When the library can't be found, the load returns an error and we
# surface a clear "install pdfium" message — pdfium is NOT bundled
# in the cargo build.
#
# Why a native lib at all: pure-Rust PDF rendering can't handle the
# diversity of real-world scanner PDFs (JPEG2000 streams, CCITT
# fax-encoded mono pages, JPX color, transparency groups). PDFium
# is the same engine Chrome / Edge / Firefox PDF.js's fallback /
# every commercial PDF SDK uses; it Just Works on any PDF a scanner
# can produce.
#
# We pin features explicitly: image_025 to match our existing image
# dep, drop thread_safe (we use pdfium from a single worker thread).
pdfium-render = { version = "0.9", default-features = false, features = [
    "image_025",
    "image_api",
    "pdfium_latest",
] }

# Convenience for spawning blocking codec jobs onto a worker thread.
# eframe's `Context::request_repaint_after` lets us drive UI updates
# from the worker thread without polling.
# (No tokio yet — encode/decode are CPU-bound, std::thread is enough.)

[target.'cfg(windows)'.dependencies]
# Windows-only GDI printing (M9). PrintDlgExW lets the user pick a
# printer + tray + size; StartDoc/StartPage + StretchDIBits push
# our 8-bpp grayscale BMP through the printer's DC. Linux/macOS
# users keep the "save BMP, print however you want" fallback per
# memory/cross_platform_goal.md.
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    # StartDoc / StartPage / EndPage / EndDoc / DOCINFOW live under
    # the Storage::Xps namespace in windows-rs even though they're
    # plain old GDI functions in gdi32.dll. Naming quirk; just an
    # extra feature flag to opt in.
    "Win32_Storage_Xps",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
] }
